--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>3TI2025</title>
 
+    <!-- BS Icons -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
@@ -15,17 +18,19 @@
 
 <body>
 
+
+    <section>
     <!-- Menu de navegação -->
-     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-         <div class="container-fluid">
-             <a class="navbar-brand" href="#">Navbar</a>
+     <nav class="navbar navbar-expand-lg">
+         <div class="container py-3">
+             <a class="navbar-brand" href="#"><i class="bi bi-apple-music me-1"></i>LSHOW</a>
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                  aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
              </button>
              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                      <li class="nav-item">
                          <a class="nav-link active" aria-current="page" href="#">Home</a>
                      </li>
@@ -50,13 +55,21 @@
                          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                      </li>
                  </ul>
-                 <form class="d-flex" role="search">
-                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                     <button class="btn btn-outline-success" type="submit">Search</button>
-                 </form>
+                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                   <li class="nav-item">
+                     <a class="nav-link" href="#">
+                         <i class="bi bi-person-badge me-1"></i>Login
+                     </a> <li>
+                        
+                     </li>
+                     <a class="nav-link" href="#">
+                         <i class=" bi bi-person-fill-gear me-1"></i>Sua Conta
+                     </a>
+                 </li>
              </div>
          </div>
      </nav>
+     </section>
     <!-- Fim Menu de navegação -->
      
 
