07- adicionadas imagens na pasta Images - Criação do objeto shows -  criação do arquivo montarFront.js - Importação do objeto show

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     </script>
 
     <script src="./js/video.js"></script>
+    <script type="module" src="./js/montarFront.js"></script>
 </body>
 
 </html>
