11- Criando o texto do Hero- Titulo, parágrafo e link - Criando a animação quando passamos o mouse sobre o botão

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="./css/keyframes.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -73,6 +74,13 @@
         <video class="hero-video" autoplay muted loop playsinline>
             <source src="./videos/hero.mp4" type="video/mp4">
         </video>
+
+        <div class="hero-text">
+            <h3 class="display-3 p-4">Lorem ipsum</h3>
+            <p class="w-50 lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo amet debitis sit officiis sapiente quae totam?
+            </p>
+            <a href="#proximosShows" class="btn btn-primary btn-lg btn-hero">Mais informações <i class="bi bi-arrow-down-circle ms-1 arrow"></i></a>
+        </div>
     </section>
     <!-- Fim Menu de navegação -->
 
