--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
 
         <div class="hero-text">
             <h3 class="display-3 p-4">Lorem ipsum</h3>
-            <p class="w-50 lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo amet debitis sit officiis sapiente quae totam?
+            <p class="w-50 lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo amet debitis sit officiis
+                sapiente quae totam?
             </p>
-            <a href="#proximosShows" class="btn btn-primary btn-lg btn-hero">Mais informações <i class="bi bi-arrow-down-circle ms-1 arrow"></i></a>
+            <a href="#proximosShows" class="btn btn-primary btn-lg btn-hero">Mais informações <i
+                    class="bi bi-arrow-down-circle ms-1 arrow"></i></a>
         </div>
     </section>
     <!-- Fim Menu de navegação -->
@@ -91,15 +93,26 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Faça seu Login</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <form id="formLogin" name="formLogin" method="get" action="">
+                        <div class="my-3">
+                            <label for="emailForm" class="form-label">Email</label>
+                            <input type="email" id="emailForm" name="emailForm"
+                            class="form-control" placeholder="Ex: seuemail@gmail.com" required>
+                        </div>
+                        <div class="my-3">
+                            <label for="formSenha" class="form-label">Senha</label>
+                            <input type="password" id="formSenha" name="formSenha" class="form-control"
+                                placeholder="Ex: 123@56" required>
+                        </div>
+
+                    </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="submit" class="btn btn-primary">Fazer Login</button>
                 </div>
             </div>
         </div>
@@ -110,6 +123,30 @@
     <section class="container py-3 my-4" id="proximosShows">
         <h4 class="display-6 mb-4">Próximos shows</h4>
         <div class="row mb-4" id="gridShows"></div>
+    </section>
+
+    <!-- Inscreva-se -->
+    <section
+        class="container-fluid my-4 p-5 d-flex flex-column align-items-center justify-content-center gap-4 inscravase">
+        <h4 class="mt-5">Inscreva-se para saber as novidades</h4>
+        <form action="" class="w-75">
+            <div class="my-3">
+                <input type="email" id="inscrevaEmail" placeholder="Insira seu e-mail aqui"
+                    class="form-control required">
+            </div>
+            <div class="my-3 d-flex d align-items-start">
+                <input type="checkbox" class="m-1" id="InscrevaCheck">
+                <label for="InscrevaCheck"> Deixe-nos mantê-lo informado sobre o que está por vir incluindo pré-vendas e
+                    ofertas
+                    exclusivas por meios eletrônicos (por exemplo, e-mail, ferramentas de mensageria, redes
+                    sociais,etc.).
+                </label>
+            </div>
+
+            <div class="my-4 text-center">
+                <button class="btn btn-outline-light btn-lg">INSCREVA-SE</button>
+            </div>
+        </form>
     </section>
 
 
